<resources>
    <string name="app_name">Inminder</string>
    <string name="reminderName">Topic:</string>
    <string name="notes">Notes:</string>
    <string name="notifiTime">Time:</string>
    <string name="detailBtn">Details</string>
    <string name="deleteBtn">Delete</string>
    <string name="updateBtn">Edit</string>
    <string name="add">Add New Reminder</string>
    <string name="addDate">Set Alerting Time</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="timeLabel">Estimated Alerting Time:</string>
    <string name="stopAlarm">Stop</string>
    <string name="toggle_turn_on">Alarm On</string>
    <string name="toggle_turn_off">Alarm Off</string>
</resources>
